Agregado de hover y links

--- a/assets/styles/modules/header1.css
+++ b/assets/styles/modules/header1.css
@@ -51,6 +51,11 @@ header {
   padding: 20px;
 }
 
+.header__link:hover{
+  text-decoration: underline;
+  color: blue;
+}
+
 .header__centerlogo {
   width: 200px;
   height: 90px;
