--- a/assets/styles/modules/footer.css
+++ b/assets/styles/modules/footer.css
@@ -84,7 +84,16 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #FFFFFF;
+  color: var(--white);
   text-align: center;
   padding: 20px;
+  }
+
+  .footer__a{
+    text-decoration: none;
+    color: var(--white);
+  }
+
+  .footer__a:hover{
+    text-decoration: underline;
   }
