--- a/assets/styles/modules/about.css
+++ b/assets/styles/modules/about.css
@@ -11,20 +11,25 @@
   }
 
   
-  .container__imagenabout {
-    margin-top: 70px;
+  .hero__container{
     display: flex;
-    justify-content: space-around;
-    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    
   }
-  
-  .container__listabout {
+
+  .hero__container-list {
     display: flex;
     flex-direction: column;
     margin-left: 20px;
+    width: 50%;
+  }
+
+  .container__imagenabout{
+    width: 50%;
   }
   
-  .card__lista {
+  .hero__list-item {
     background: #ffffff;
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -33,12 +38,26 @@
     padding: 35px;
   }
   
-  .card__lista p {
+  .hero__list-item p {
     color: var(--grey);
   }
   
-  .card__lista h3 {
+  .hero__list-item h3 {
     color: var(--black);
     display: inline;
     margin-left: 20px;
   }
+
+
+  
+@media (max-width: 767px) {
+  .hero__container{
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .hero__container-list {
+    width: 100%;
+    flex-wrap: nowrap;
+  }
+}
