--- a/assets/styles/modules/footer.css
+++ b/assets/styles/modules/footer.css
@@ -52,7 +52,7 @@
   
   .footer__search{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
   }
   
@@ -62,14 +62,13 @@
       outline: none;
       padding: 6px 12px;
       height: 50px;
-      width: 369px;
-      position: relative;
+      width: 100%;
+      
   }
   
   .footer__search-label {
     font-size: 15px;
     font-weight: 400;
-    height: 46px;
     padding: 11px 13px;
     color: white;
     background-color: #5956e9;
@@ -97,3 +96,49 @@
   .footer__a:hover{
     text-decoration: underline;
   }
+
+  .card__separator{
+    width: max-content;
+  }
+
+  .footer__infocontact{
+    box-shadow: 0px 10px 50px -5px rgb(106 99 99);
+    background: rgb(255, 255, 255);
+    display: flex;
+    max-width: fit-content;
+    color: #000;
+    padding: 15px 0;
+    border-radius: 15px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    top: 4680px;
+  }
+
+  .footer__infocontact-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 25px;
+  }
+
+  .footer__infocontact-item div {
+    background-color: #5956E9;
+    width: fit-content;
+    border-radius: 50px;
+}
+
+  .footer__infocontact-item div img{
+    margin: auto;
+    display: block;
+    padding: 15px;
+}
+  
+.footer__infocontact-item p{
+ margin-left: 10px;
+}
+
+.footer__infocontact-item:last-child {
+  border-left: 2px solid #6C6C72;
+}
