--- a/assets/styles/modules/hero.css
+++ b/assets/styles/modules/hero.css
@@ -56,3 +56,17 @@ h3 {
   text-transform: uppercase;
   color: #232233;
 }
+
+
+
+/* Mobile */
+
+
+@media (max-width: 767px) {
+  .download-your-app__row {
+    flex-direction: column;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
