--- a/assets/styles/modules/our-reative-team.css
+++ b/assets/styles/modules/our-reative-team.css
@@ -12,6 +12,8 @@
     padding-bottom: 100px;
   }
 
+
+
   .card-people {
     margin-left: 10px;
     width: 100%;
@@ -25,7 +27,10 @@
   }
   
   .card-people__img {
-    margin-top: 40px;
+    margin-top: 30px;
+    width: 50%;
+    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='%233834ECFF' stroke-width='6' stroke-dasharray='50%25%2c 13%25' stroke-dashoffset='86' stroke-linecap='butt'/%3e%3c/svg%3e");
+     
   }
   
   .card-people h3 {
@@ -51,43 +56,23 @@
     flex-wrap: nowrap;
     
   }
-  
-  .card-socialmedia__img {
-    margin: 20px;
+
+  .card__img{
+    width: 25%;
   }
   
   .card__separator{
     font-weight: 700;
+    padding: 20px;
 
   }
+
   
-  .container__cardinfo{
-    padding: 60px;
-    width: 688px;
-    height: 150px;
-    border-radius: 15px;
-    box-shadow: 0px 10px 50px -5px rgb(106 99 99);
-    background: rgb(255, 255, 255);
-    position: absolute;
-    top: 4650px;
-    left: 350px;
-    display: flex;
-    justify-content: space-between;
-  }
+ 
+
+
+
+
+
+
   
-  .card__moreinfo div {
-    background-color: #5956E9;
-    width: max-content;
-    border-radius: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 25px;
-    display: inline;
-  }
-  
-  
-  .card__moreinfo p {
-    display: inline;
-    padding-left: 10px;
-  }
