--- a/assets/styles/modules/app-features.css
+++ b/assets/styles/modules/app-features.css
@@ -3,136 +3,143 @@
  * App - features section
  * ========================================
  */
- 
 
-  
-  .features__title {
-    margin-top: 70px;
-    margin-bottom: 40px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #ffffff;
-  }
-  
-  
-  .features__container-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 50px;
-  }
 
-  .features__subtitle{
-    width: 60%;
-    margin: auto;
-    padding-bottom: 80px;
-  }
 
-  .features__centralcard-img{
-      height: max-content;
-  }
-  
-  
+.features__title {
+  margin-top: 70px;
+  margin-bottom: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+
+.features__container-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 50px;
+}
+
+.features__subtitle {
+  width: 60%;
+  margin: auto;
+  padding-bottom: 80px;
+}
+
+.features__centralcard-img {
+  height: max-content;
+}
+
+
+.features__container-main {
+  display: flex;
+  justify-content: column;
+  flex-wrap: nowrap;
+}
+
+.features__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 40%;
+}
+
+.features__img {
+  filter: invert(1);
+  width: 28.31px;
+  height: 50px;
+  margin-bottom: 10px;
+}
+
+.features__firstcolumn-card {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-end;
+  padding-bottom: 20px;
+}
+
+.features__firstcolumn-card p {
+  text-align: end;
+  padding: 20px 0;
+}
+
+.features__firstcolumn-card h5,
+.features__secondcolumn-card h5 {
+  padding: 20px 0;
+}
+
+.features__secondcolumn-card {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.features__container-card p {
+  text-align: center;
+  color: var(--white);
+  width: 40%;
+  margin: auto;
+}
+
+.features__container-card h5 {
+  text-transform: uppercase;
+  padding: 10px 0;
+}
+
+
+
+/* MOBILE */
+@media (max-width: 767px) {
   .features__container-main {
-    display: flex;
-    justify-content: column;
-    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    flex: wrap;
   }
-  
+
   .features__column {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 40%;
-  }
-  
- .features__img {
-    filter: invert(1);
-    width: 28.31px;
-    height: 50px;
-    margin-bottom: 10px;
+    width: 100%;
   }
 
-  .features__firstcolumn-card{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: flex-end;  
-    padding-bottom: 20px;
-  }
-
-  .features__firstcolumn-card p{
-    text-align: end;
+  .features__firstcolumn-card {
+    justify-content: center;
+    align-items: flex-start;
     padding: 20px 0;
   }
 
-  .features__firstcolumn-card h5, .features__secondcolumn-card h5{
-    padding: 20px 0;
+  .features__firstcolumn-card p {
+    text-align: start;
   }
 
   .features__secondcolumn-card {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap; 
+    justify-content: center;
+    align-items: center;
   }
 
-  .features__container-card p{
-    text-align: center;
-    color: var(--white);
+  .features__img {
     width: 40%;
-    margin: auto;
-  }
-
-  .features__container-card h5{
-    text-transform: uppercase;
-    padding: 10px 0;
+    margin: 30px 0;
+    align-self: center;
   }
 
 
-
- /* MOBILE */ 
-  @media (max-width: 767px) {
-    .features__container-main{
-      flex-direction: column;
-      align-items: center;
-      flex: wrap;
-    }
-
-    .features__column{
-      width: 100%;
-    }
-
-    .features__firstcolumn-card{
-      justify-content: center;
-      align-items: flex-start;
-      padding: 20px 0;
-    }
-
-    .features__firstcolumn-card p{
-      text-align: start;
-    }
-
-    .features__secondcolumn-card{
-      justify-content: center;
-      align-items: center;
-    }
-
-    .features__img{
-      width: 40%;
-      margin: 30px 0;
-    }
-
-    .features__centralcard-img{
-      margin-left: 60px;
-    }
-
-    .features__centralcard-img img{
-      width: 70%;
-    }
-
-    .features__container-card p{
-      text-align: start;
-      width: 100%;
-    }
+  .features__centralcard-img {
+    margin-left: 60px;
   }
+
+  .features__centralcard-img img {
+    width: 70%;
+  }
+
+  .features__container-card p {
+    text-align: start;
+    width: 100%;
+  }
+
+  .subtitle_black {
+    width: 90%;
+  }
+}
