--- a/assets/styles/modules/our-reative-team.css
+++ b/assets/styles/modules/our-reative-team.css
@@ -50,26 +50,23 @@
   
   .card-socialmedia {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: row;
     flex-wrap: nowrap;
-    
+    padding: 40px;
+    width: 100%;
+  }
+
+  .card-socialmedia i{
+      color: black;
   }
 
   .card__img{
     width: 25%;
   }
   
-  .card__separator{
-    font-weight: 700;
-    padding: 20px;
-  }
-
-  .fa-pipe{
-    color: white;
-  }
-
+  
 
   /* Mobile */
 
