--- a/assets/styles/modules/header.css
+++ b/assets/styles/modules/header.css
@@ -15,7 +15,7 @@ header {
   margin: auto;
 }
 
-.header-contacto {
+.header__container-contact {
   display: flex;
   justify-content: space-between;
 }
@@ -30,7 +30,8 @@ header {
 
 .header__menu {
   margin-top: 10px;
-  height: 60px;
+  min-width: 343px;
+  max-height: 60px;
   background-color: var(--white);
   display: flex;
   flex-direction: row;
@@ -67,22 +68,89 @@ header {
 }
 
 .header__centerlogo {
-  width: 200px;
-  height: 90px;
+  min-width: 100px;
+  min-height: 60px; 
+  padding: 40px;
   background: #ffffff;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
-.header__logo {
-  position: relative;
-  top: 30%;
+.header__logo-img img{
+  min-width: 79px;
+  min-height: 12px;
 }
+
 
 .header__button {
   padding: 8px;
   background-color: var(--royal-blue);
   color: var(--white);
   margin-right: 2px;
+}
+
+.header__iconhamburger{
+  padding: 20px;
+  display: none;
+}
+
+.header__btndownload{
+  display: none;
+  padding: 20px;
+  min-width: 76px;
+  min-height: 34px;
+}
+
+.header__btndownload a{
+  font-size: 10px;
+}
+
+
+@media (max-width: 767px) {
+
+  .header__container-contact{
+    display: none;
+  }
+
+  .header__menu{
+    flex-wrap: nowrap;
+  }
+
+  .header__first-ul{
+    display:none;
+  }
+
+  .header__link{
+    display: none;
+  }
+
+  .header__iconhamburger{
+    display:block;
+    width: 30%;
+  }
+
+  .header__btndownload{
+    display: block;
+  }
+
+  .header__iconhamburger i{
+    color:black;
+  }
+
+  .header__logo-img{
+    overflow: hidden;
+  }
+
+  .header__second-ul{
+    display:none;
+  }
+
+  .header__centerlogo{
+    width: 40;
+  }
+  
 }
