--- a/assets/styles/modules/about.css
+++ b/assets/styles/modules/about.css
@@ -11,14 +11,14 @@
 }
 
 
-.hero__container {
+.about__container {
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
 
 }
 
-.hero__container-list {
+.about__container-list {
   display: flex;
   flex-direction: column;
   margin-left: 20px;
@@ -29,35 +29,51 @@
   width: 50%;
 }
 
-.hero__list-item {
+.about__list-item {
   background: #ffffff;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   width: 100%;
+  height: 100%;;
   margin-bottom: 10px;
   padding: 35px;
+  display: flex;
 }
 
-.hero__list-item p {
+.about__list-item-img{
+  width: 20%;
+  align-self: flex-start;
+}
+
+.about__list-item-text{
+  width: 80%;
+}
+
+.about__list-item p {
   color: var(--grey);
 }
 
-.hero__list-item h3 {
+.about__list-item h3 {
   color: var(--black);
   display: inline;
-  margin-left: 20px;
+  font-size: 20px;
+}
+
+ .about__list-item-h3{
+  margin-bottom: 50px;
 }
 
 
 
 @media (max-width: 767px) {
-  .hero__container {
+  .about__container {
     flex-direction: column;
     align-items: center;
-
   }
 
-  .hero__container-list {
+
+
+  .about__container-list {
     width: 100%;
     flex-wrap: nowrap;
   }
@@ -72,4 +88,12 @@
   .container__imagenabout img {
     max-width: 90%;
   }
+
+  .about__list-item h3 {
+    color: var(--black);
+    display: inline;
+    padding-left: 2px;
+    font-size: 20px;
+  }
+ 
 }
