--- a/assets/styles/modules/header.css
+++ b/assets/styles/modules/header.css
@@ -10,6 +10,40 @@ header {
   color: #fff;
 }
 
+.header__hamburger{
+  display:none;
+  width: 267px;
+  height: 356px;
+  background-color: #ffffff;
+  z-index: 300;
+  position: relative;
+  width: 100vw;
+}
+
+.header__hamburger-ul{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 30px;
+  color: black;
+  text-decoration: none;
+  list-style: none;
+}
+
+.header__hamburger-li{
+  text-transform: uppercase;
+  font-size: 20px;
+  padding: 10px 0;
+}
+
+.header__close{
+  align-self: flex-end;
+}
+
+.header__close i{
+  color: var(--royal-blue);
+}
+
 .container__header {
   width: 80%;
   margin: auto;
