--- a/assets/styles/modules/header.css
+++ b/assets/styles/modules/header.css
@@ -21,6 +21,11 @@ header {
   width: 100vw;
 }
 
+.header__hamburger-a{
+  color:black;
+  text-decoration: none;
+}
+
 .header__hamburger-ul {
   display: flex;
   justify-content: flex-start;
