--- a/assets/styles/modules/header.css
+++ b/assets/styles/modules/header.css
@@ -17,8 +17,10 @@ header {
   height: 356px;
   background-color: #ffffff;
   z-index: 300;
-  position: relative;
-  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
 }
 
 .header__hamburger-a{
