--- a/assets/styles/core/global.css
+++ b/assets/styles/core/global.css
@@ -39,19 +39,27 @@
 }
 
 .icons__fb i:hover{
-	color:#395694
+	color:#395694;
+	transform: scale(2);
+	transition-duration: 2s;
 }
   
 .icons__yt i:hover{
 	color: #D72825;
+	transform: scale(2);
+	transition-duration: 2s;
 }
   
 .icons__tw i:hover{
 	color: #36A7F2;
+	transform: scale(2);
+	transition-duration: 2s;
 }
 
 .icons__ig i:hover{
 	color: #EA7584;
+	transform: scale(2);
+	transition-duration: 2s;
 }
 
 
